Stripe fixes (#69)
* Fix Stripe payment method handling and update subscription plan naming

* Refactor Stripe integration: update subscription handling, add seat count management, and enhance product catalog structure

* Enhance Stripe session creation: add automatic customer address update

* Fix formatting in StripeSetupService to improve readability

* Refactor SubscriptionServiceTest and WebhookServiceTest: update plan handling to use PlanKey, improve test readability, and enhance mock setups

* Refactor SubscriptionServiceTest and WebhookServiceTest: improve code readability and organization